force-app/main/default/objects/Must_Sell_Config__c/Must_Sell_Config__c.object-meta.xml
<CustomObject>
    <description>Configuration for Priority Sell products (Must Sell and Focused Sell). Defines which products are mandatory or recommended for ordering, filtered by Territory, Channel, and Customer Type.</description>
    <label>Priority Sell Config</label>
    <nameField>
        <displayFormat>MSC-{0000}</displayFormat>
        <label>Config Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Priority Sell Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>