force-app/main/default/objects/Must_Sell_Config__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Must Sell</fullName>
                <default>true</default>
                <label>Must Sell</label>
            </value>
            <value>
                <fullName>Focused Sell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>