force-app/main/default/objects/Must_Sell_Config__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Outlet Type</label>
    <description>When set, this config applies only to Retailer accounts of this outlet type (matches Account.Outlet_Type__c). Leave blank for all outlet types. For Modern Trade targeting, use Channel = MT instead.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grocery</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>General Store</fullName>
            </value>
            <value>
                <fullName>Cosmetics</fullName>
            </value>
            <value>
                <fullName>Pan Shop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>