force-app/main/default/objects/Must_Sell_Config__c/fields/Min_Qty__c.field-meta.xml
<CustomField>
    <fullName>Min_Qty__c</fullName>
    <label>Minimum Quantity</label>
    <description>Minimum quantity required for Must Sell products. If the product is in the order but below this qty, order submission is blocked.</description>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <defaultValue>1</defaultValue>
</CustomField>