force-app/main/default/objects/Must_Sell_Config__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <description>When set, this config applies only to accounts in this territory. Leave blank for all territories.</description>
    <type>Lookup</type>
    <referenceTo>Territory_Master__c</referenceTo>
    <relationshipLabel>Must Sell Configs</relationshipLabel>
    <relationshipName>Must_Sell_Configs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>