force-app/main/default/objects/Must_Sell_Config__c/validationRules/Product_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Required</fullName>
    <active>true</active>
    <description>Product is required for Must-Sell Configuration.</description>
    <errorConditionFormula>ISBLANK(Product_Ext__c)</errorConditionFormula>
    <errorDisplayField>Product_Ext__c</errorDisplayField>
    <errorMessage>Product is required for Must-Sell Configuration.</errorMessage>
</ValidationRule>